Got XGBoost implemented in code and working. Got Feature importance bar graph and ROC curves being exported to analysis folder.

--- a/script/config.properties
+++ b/script/config.properties
@@ -2,9 +2,11 @@
 
 # Where all data is stored.
 data_dir = "../data/"
+main_data = "main/"
+processed_data = "processed/"
 
 # Where all ML algorithm output, and saved models, are put
 output_dir = "../output/"
 
 # Where all analysis files are put
-analysis_dir = "../analysis"
+analysis_dir = "../analysis/"
