--- a/.gitignore
+++ b/.gitignore
@@ -128,8 +128,11 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-# main data
+# main and preprocessed data
 data/main/
+data/processed
 
 # VS code
 .vscode/
+
+data_flow*
